# distributed-ml

./: .gitignore  Cargo.toml  LICENSE  ML.py  client.py  network.py  python2p2p_test.py  server.py  test.py  test2.py
libs/pythonp2pmain/pythonp2p/: node.py  portforwardlib.py
src/: client.rs  main.rs  ml.rs  server.rs
